cambio en titulo

--- a/site/index1.html
+++ b/site/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera!</title>
+	<title>Hello coursera! Gran curso</title>
 </head>
 <body>
 <h1>Hello coursera!</h1>
