--- a/site/index1.html
+++ b/site/index1.html
@@ -4,6 +4,6 @@
 	<title>Hello coursera! Gran curso</title>
 </head>
 <body>
-<h1>Hello coursera!</h1>
+<h1>Hello coursera! Hola mundo</h1>
 </body>
 </html>
