ENtrega de modulo2

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Module2-solution</title>
+	<meta name="viewport" content="width=device-width, initial scale=1" maximun.scale=1.0>
+	<link rel="stylesheet" href="sytle.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css">
+	
+	
 </head>
-<body>
+<body class="centrado">
+
+	<div class="caja">
+		<h1>lorem:</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. </p>
+	</div>
+	<div class="caja2">
+		<h1>lorem:</h1>
+		<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</P></div>
+
+	<div class="caja2">
+		<h1>Lorem:</h1>
+		<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</P></div>	
 
 </body>
 </html>
