--- a/site/index1.html
+++ b/site/index1.html
@@ -5,22 +5,32 @@
 	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-<h1>Hello coursera!</h1>
-
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo beatae possimus corrupti nobis, reiciendis et at alias in, cupiditate aliquid magnam dicta reprehenderit harum iste, numquam veniam ipsa unde facilis.</p>
-
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, qui, aut amet doloribus vitae debitis sapiente nostrum reprehenderit sit quod unde voluptatem, alias vel delectus ullam rerum consequuntur ipsa autem.</p>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque vel eaque excepturi voluptas dolorum quae beatae quas optio impedit reprehenderit assumenda ipsum iure in, quo quod autem suscipit. Eaque?</p>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quis, officia praesentium architecto sapiente atque, explicabo cum, iusto perferendis error ipsa minima quod reiciendis eius repudiandae quo neque quasi tempora! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, nobis sit odit optio officiis nesciunt tenetur ducimus eaque incidunt, quas harum atque, culpa quo. Ad consequuntur accusamus fugit tempora deleniti. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, eos molestiae obcaecati nisi eligendi non in aspernatur voluptatum blanditiis reprehenderit praesentium, voluptas ratione libero ipsum et soluta illum animi ab! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa recusandae vel quaerat sunt, nam quam? Molestias iure temporibus obcaecati consequatur! Doloribus voluptate iusto itaque provident dignissimos ad nemo praesentium officia!</p>
 
 
+<div class="container">
+	
+	<h1>Hello coursera!</h1>
 
-<div>hola bb</div>
-
-<a href="#">pum punm pum</a>
-
+<div class="cajas">
+	<div class="box">
+		<menu class="box 1">
+			<p>hola</p>
+		</menu>
+	</div>
+	
+	<div class="box 2">
+		<menu>
+			<p>hola</p>
+		</menu>
+	</div>
+	
+	<div class="box 3">
+		<menu>
+			<p>hola</p>
+		</menu>
+	</div>
+</div>
+</div>
 
 </body>
 </html>
