--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" href="sytle.css">
 	
 	
+	
 </head>
 <body class="centrado">
+	<h2>OUR MENU</h2>
 
 	<div class="caja">
 		<h1 class="position">lorem: titulo</h1>
