--- a/site/index1.html
+++ b/site/index1.html
@@ -5,32 +5,9 @@
 	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-
-
-<div class="container">
-	
-	<h1>Hello coursera!</h1>
-
-<div class="cajas">
-	<div class="box">
-		<menu class="box 1">
-			<p>hola</p>
-		</menu>
-	</div>
-	
-	<div class="box 2">
-		<menu>
-			<p>hola</p>
-		</menu>
-	</div>
-	
-	<div class="box 3">
-		<menu>
-			<p>hola</p>
-		</menu>
-	</div>
-</div>
-</div>
+<p>
+	hello world
+</p>
 
 </body>
 </html>
