Poniendo estilos de letra

--- a/site/index1.html
+++ b/site/index1.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hello coursera! Gran curso</title>
 	<link rel="stylesheet" href="estilo.css">
+	<link href="Oxygen-Bold.ttf">
 </head>
 <body>
 <p>
