--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -6,7 +6,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial scale=1" maximun.scale=1.0>
 	<link rel="stylesheet"  href="Css.css">
-	
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css">	
 		
 </head>
 
