--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -1,63 +1,29 @@
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title> cabezera fija</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial scale=1" maximun.scale=1.0>
-	<link rel="stylesheet"  href="Css.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <title>Module3-solution</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css">	
-		
-</head>
-
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="Css.css">
+  </head>
 <body>
-	<header class="header">
-		<div class="container " id="nav">
-			<img src="img/logo.jpeg" alt="" width="175px" height="175px">
-			<span class="menu-icon" > ver menu </span>
-			<nav class="navigation">
-				<ul>
-					<li><a href="#">Chicken</a></li>
-					<li><a href="#">Horse</a></li>
-					<li><a href="#">Soup</a></li>
-					<li><a href="#">Love</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<main class="main">
-		<div class=" container"> 
-			<h1>Bienvenidos. </h1>
-			<p>arepa arepa arepa arepa arepa arepa arepa arepa arepa arepa </p>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-		</div>
-		
-	</main>
-	<footer class="footer">
-		<div class="container">
-			<p> Derechos Reservados | Comyser® </p>
-			
-		</div>
-	</footer>
+  <h1>Hello Coursera!</h1>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
+</html>
