--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -12,14 +12,14 @@
     <![endif]-->
 
     <title>Module3-solution</title>
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="Css.css">
+	  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="Css.css">
   </head>
 <body>
 
-  <h1>Hello Coursera!</h1>
 
+  <h1>Hola!! Coursera</h1>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="bootstrap/js/bootstrap.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
