--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -20,6 +20,10 @@
 
 
   <h1>Hola!! Coursera</h1>
+
+  <footer>
+    <p>Diseñado por Daniel</p>
+  </footer>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="bootstrap/js/bootstrap.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
