--- a/Module3-solution/bye.html
+++ b/Module3-solution/bye.html
@@ -39,16 +39,16 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
-              <a href="menu-categories.html">
-                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Chicken</a>
+              <a href="#">
+                <span class="glyphicon glyphicon-piggy-bank"></span><br class="hidden-xs"> Pig</a>
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Horse</a>
+                <span class=" glyphicon glyphicon-heart "></span><br class="hidden-xs"> Love</a>
             </li>
             <li>
               <a href="#">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Cow</a>
+                <span class="glyphicon glyphicon-ok"></span><br class="hidden-xs"> OK? owo</a>
             </li>
             <li id="phone" class="hidden-xs">
               <a href="#">
@@ -81,8 +81,8 @@
       </p>
   </main>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/main.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="bootstrap/js/jquery-3.5.1.min.js"></script>
+  <script src="bootstrap/js/bootstrap.js"></script>
+  <script src="bootstrap/js/npm.js"></script>
 </body>
 </html>
