resolviendo error en link

--- a/Module3-solution/bye.html
+++ b/Module3-solution/bye.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Module3-solution</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="hi.css">
+    <link rel="stylesheet" href="Hi.css">
     <link href="Lora-Italic-VariableFont_wght.ttf">
     <link href="Oxygen-Bold.ttf">
   </head>
