git commit -m "todo nice, js"

--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -1,14 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
+    <title>Archivo Mod</title>
+    <link rel="stylesheet" href="Style.csss">
+    
   </head>
 <body>
+  
   <h1>Lecture 40</h1>
+
+
+  <!--Comenzando Js-->
+
 
   <script src="main.js"></script>
   <script>
   console.log(x);
+  console.log("D-power!!!!")
+
   </script>
 </body>
 </html>
