Usando js en 15 minutos con todo

--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -1,19 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <title>Archivo Mod</title>
-    <link rel="stylesheet" href="Style.csss">
-    
-  </head>
-<body>
-  
-  <h1>Lecture 40</h1>
+     <head>
+          <title></title>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link href="Style.css" rel="stylesheet">
+          <link type="javascript" href="main.js">
+     </head>
+     <body>
 
+     <h1>TITULO</h1> 
+     <header>
+          <nav>
+               <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+               </ul>
+          </nav>
+     </header>
+     <main>
+          <section>
+               <article>
+                    
+               </article>
+          </section> 
+     </main>
 
-  <!--Comenzando Js-->
-
-
-  <script src="main.js"></script>
-</body>
+     <script src="main.js" type="text/javascript"></script>
+     </body>
 </html>
