--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -9,10 +9,10 @@
      </head>
      <body>
 
-     <h1>TITULO</h1> 
-     <header>
-          <nav>
-               <ul>
+     
+     <header class="header">
+          <nav class="nav">
+               <ul class="elementos">
                     <li> </li>
                     <li> </li>
                     <li> </li>
@@ -20,6 +20,7 @@
           </nav>
      </header>
      <main>
+          <h1>TITULO</h1>
           <section>
                <article>
                     
