--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -19,7 +19,7 @@
                </ul>
           </nav>
      </header>
-     <main>
+     <main class="Container">
           <h1>TITULO</h1>
           <section>
                <article>
