--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -23,7 +23,8 @@
           <h1>TITULO</h1>
           <section>
                <article>
-                    
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam hic qui vel neque eum laborum provident aut dolore id, minima, quisquam dolores dolor. Numquam quo perspiciatis sequi beatae nulla repellendus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem modi possimus distinctio! Vero, nihil repellendus! Similique nostrum, iste corrupti facere magnam quam. Possimus eveniet delectus et adipisci saepe quaerat tempora. </p>
                </article>
           </section> 
      </main>
