--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-     <head>
-          <title>Super</title>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link href="Style.css" rel="stylesheet">
-          
-     </head>
-     <body>
-
-     
-     <header class="header">
-          <nav class="nav">
-               <ul class="elementos">
-                    <li> </li>
-                    <li> </li>
-                    <li> </li>
-               </ul>
-          </nav>
-     </header>
-     <main class="Container">
-          <h1>TITULO</h1>
-          <section>
-               <article>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam hic qui vel neque eum laborum provident aut dolore id, minima, quisquam dolores dolor. Numquam quo perspiciatis sequi beatae nulla repellendus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem modi possimus distinctio! Vero, nihil repellendus! Similique nostrum, iste corrupti facere magnam quam. Possimus eveniet delectus et adipisci saepe quaerat tempora. </p>
-               </article>
-          </section> 
-     </main>
-
-     <script src="main.js" type="text/javascript"></script>
-     </body>
+    <head>
+        <title>Super</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="Style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <p id="parrafo" class="">
+            pollo pollo pollo pollo kdakdnamdnbadlaskdhafksjfdajdhlfajhdajsh
+        </p>
+        <div><p>Jidldknasdmlasdfjj</p></div>
+        <h1 class="saludo">BJBJjshadaldhkhfkdldsh</h1>
+        <img
+            id="coc"
+            src="Tampoco hay que presumir cabo.jpg"
+            alt="tampoco hay que presumir cabo"
+        />
+        <script src="jquery-3.5.1.min.js"></script>
+        <script src="jquery.js"></script>
+    </body>
 </html>
