--- a/Module3/Index.html
+++ b/Module3/Index.html
@@ -13,10 +13,13 @@
         <div><p>Jidldknasdmlasdfjj</p></div>
         <h1 class="saludo">BJBJjshadaldhkhfkdldsh</h1>
         <img
-            id="coc"
+            id="coco"
             src="Tampoco hay que presumir cabo.jpg"
             alt="tampoco hay que presumir cabo"
+            width="400"
         />
+        <button id="btn1">Mostrar</button>
+        <button id="btn2">Ocultar</button>
         <script src="jquery-3.5.1.min.js"></script>
         <script src="jquery.js"></script>
     </body>
